@@ -57,21 +57,6 @@ public enum ProviderLocator {;
     }
 
     /**
-     * Utility class for locating a class with OSGi registry
-     * support.  Uses the thread context classloader as part of
-     * the search order.
-     *
-     * @param className The name of the target class.
-     *
-     * @return The loaded class.
-     * @exception ClassNotFoundException
-     *                   Thrown if the class cannot be located.
-     */
-    static public <T> Class<T> loadClass(String className, Class<?> contextClass) throws ClassNotFoundException {
-        return loadClass(className, contextClass, Thread.currentThread().getContextClassLoader());
-    }
-
-    /**
      * Standardized utility method for performing class lookups
      * with support for OSGi registry lookups.
      *
@@ -140,7 +125,7 @@ public enum ProviderLocator {;
             // TODO: this should have a doPrivileged() around it
             // BUT because locateServiceClass tries to load any service described in one loader
             // from another loader as well, a doPrivileged() block here would expose a HUGE security hole
-            return cls.newInstance();
+            return cls.getConstructor().newInstance();
         }
         // a provider was not found
         return null;
